--- a/laba1.Rmd
+++ b/laba1.Rmd
@@ -4,16 +4,16 @@ author: "Mironova Elena"
 date: ' 9 октября 2017'
 output: html_document
 ---
-##ЗАДАНИЕ 1.
+### ЗАДАНИЕ 1.
 
-1. Сгенерируйте 200 случайных значений из стандартного экспоненциального распределения и сохраните в вектор exp.1. Найдите среднее и стандартное отклонение из данных этого вектора.
+#### 1. Сгенерируйте 200 случайных значений из стандартного экспоненциального распределения и сохраните в вектор exp.1. Найдите среднее и стандартное отклонение из данных этого вектора.
 ```{r}
 exp.1 <- rexp(200)
 mean.1 <- mean(exp.1) #среднее отклонение
 sd.1 <- sd(exp.1) #стандарт.отклонение
 ```
 
-2. Повторите, использовав следующие значения параметра λ: 0.1, 0.5, 5, 10, и сохраните результаты в векторы: exp.0.1, exp.0.5, exp.5, exp.10.
+#### 2. Повторите, использовав следующие значения параметра λ: 0.1, 0.5, 5, 10, и сохраните результаты в векторы: exp.0.1, exp.0.5, exp.5, exp.10.
 ```{r}
 #Для 0.1
 exp.0.1 <- rexp(200,0.1)
@@ -36,9 +36,9 @@ mean.10 <- mean(exp.10)
 sd.10 <- sd(exp.10)
 ```
 
-3. Функция plot() - общая функция для визуализации данных. Функция hist() принимает данные и раскладывает их по корзинам. Чтобы использовать эти функции, нужно для начала передать им данные, которые хотим визуализировать.
+#### 3. Функция plot() - общая функция для визуализации данных. Функция hist() принимает данные и раскладывает их по корзинам. Чтобы использовать эти функции, нужно для начала передать им данные, которые хотим визуализировать.
 
-4. Используйте функцию hist() для построения гистограммы полученного ранее стандартного распределения.
+#### 4. Используйте функцию hist() для построения гистограммы полученного ранее стандартного распределения.
 ```{r}
 hist(exp.1, prob = TRUE, main = "Гистограмма станд. эксп. распределения", ylab="Плотность распр-я")
 curve(dexp(x), from = 0, to = 8, add = TRUE, col = "red")
@@ -46,7 +46,7 @@ curve(dexp(x), from = 0, to = 8, add = TRUE, col = "red")
 
 Вывод: вид гистограммы примерно соответствует виду стандартного экспоненциального распределения, но для столбцов с наибольшей плотностью распределения, отклонения достаточно большие. Возможно из-за небольшого количества наблюдений. Если взять большее кол-во наблюдений - их распределение будет ближе к необходимому.
 
-5. Используйте функцию plot() с тем же самым вектором для построения графика значений в порядке следования.
+#### 5. Используйте функцию plot() с тем же самым вектором для построения графика значений в порядке следования.
 ```{r}
 plot(exp.1, xlab="Индекс значения", main="График значений exp.1 в порядке следования")
 lines(exp.1)
@@ -54,14 +54,14 @@ lines(exp.1)
 
 Вывод: Есть разброс значений, значения генерируются в случайном порядке. Есть выброс.
 
-6. Используйте функцию plot() с любыми двумя полученными ранее векторами, чтобы получить диаграмму рассеяния (scatterplot) этих векторов относительно друг друга.
+#### 6. Используйте функцию plot() с любыми двумя полученными ранее векторами, чтобы получить диаграмму рассеяния (scatterplot) этих векторов относительно друг друга.
 ```{r}
 plot(exp.0.5,exp.5,main="Диаграмма рассеяния exp.0.5 и exp.5")
 ```
 
 Вывод: диаграмма  показывает, что между векторами не наблюдается связи, так как точки далеко разбросаны по диаграмме. Таким образом, векторы экспоненциальных распределений с различными значениями λ не являются зависимыми друг от друга.
 
-7. Теперь сравним свойства всех наших векторов. Для начала создадим вектор, содержащий средние значения каждого из 5 полученных ранее распределений в порядке их создания. Полученный вектор сохраним в переменную exp.means.
+#### 7. Теперь сравним свойства всех наших векторов. Для начала создадим вектор, содержащий средние значения каждого из 5 полученных ранее распределений в порядке их создания. Полученный вектор сохраним в переменную exp.means.
 ```{r}
 exp.means <- c(mean.1,mean.0.1,mean.0.5,mean.5,mean.10)
 ```
@@ -88,18 +88,18 @@ plot(exp.means, exp.sds, bg = "red", pch = 23)
 Вывод 3: диаграмма показывает, что между вектором средних и вектором стандратных отклонений существует однозначная линейная зависимость.
 
 
-##ЗАДАНИЕ 2.
+### ЗАДАНИЕ 2.
 
 R достаточно производителен, чтобы вычислять относительно большие объёмы данных.
 
-1. Для демонстрации сгенерируйте 1100000 (1 млн. 100 тысяч) чисел из стандартного экспоненциального распределения и сохраните их в вектор huge.exp.1. Получите среднее и стандартное отклонение.
+#### 1. Для демонстрации сгенерируйте 1100000 (1 млн. 100 тысяч) чисел из стандартного экспоненциального распределения и сохраните их в вектор huge.exp.1. Получите среднее и стандартное отклонение.
 ```{r}
 huge.exp.1 <- rexp(1100000)
 huge.exp.1.mean <- mean(huge.exp.1)
 huge.exp.1.sd <- sd(huge.exp.1)
 ```
 
-2. Получите гистограмму huge.exp.1. Она соответствует функции 1 - e:^(-x)? Должна ли?
+#### 2. Получите гистограмму huge.exp.1. Она соответствует функции 1 - e:^(-x)? Должна ли?
 ```{r}
 hist(huge.exp.1, prob = TRUE, main = "Гистограмма станд. экспон. распр-я", ylab="Плотность распр-я")
 curve(dexp(x), from = 0, to = 8, add = TRUE, col = "red")
@@ -109,7 +109,7 @@ curve(dexp(x), from = 0, to = 8, add = TRUE, col = "red")
 
 Вид полученной гистограммы действительно соответствует виду стандартного экспоненциального распределения. Отклонения от требуемого распределения стали значительно меньше по сравнению с гистограммой из предыдущего задания, => при увеличении кол-ва наблюдений, вид полученного распределения действительно приблизился к требуемому. 
 
-3. Получите среднее всех чисел из huge.exp.1 строго больших 1. Для проверки выборки может потребоваться новый вектор.
+#### 3. Получите среднее всех чисел из huge.exp.1 строго больших 1. Для проверки выборки может потребоваться новый вектор.
 ```{r}
 mean.trew.1 <- mean(huge.exp.1>1)
 
@@ -119,7 +119,7 @@ mean.check <- mean(check.trew.1)
 mean.trew.1==mean.check
 ```
 
-4. Получите матрицу huge.exp.1.mat, содержащую 1100 строк и 1000 колонок. Постройте гистограмму, использовав полученную матрицу. Что можно сказать о полученных данных?
+#### 4. Получите матрицу huge.exp.1.mat, содержащую 1100 строк и 1000 колонок. Постройте гистограмму, использовав полученную матрицу. Что можно сказать о полученных данных?
 ```{r}
 huge.exp.1.mat<-matrix(huge.exp.1,nrow=1100,ncol=1000)
 hist(huge.exp.1.mat, prob = TRUE, main = "Гистограмма станд. эксп. распр-я", ylab="Плотность распр-я")
@@ -128,12 +128,12 @@ curve(dexp(x), from = 0, to = 8, add = TRUE, col = "red")
 
 Вывод: гистограмма точно такая же как и в пункте 2, а значит вид гистограммы не зависит от способа представления входных данных.
 
-5. Рассчитайте среднее 137-й колонки из huge.exp.1.mat.
+#### 5. Рассчитайте среднее 137-й колонки из huge.exp.1.mat.
 ```{r}
 mean.huge.mat.1.137 <- colMeans(huge.exp.1.mat)[137]
 ```
 
-6. Найдите среднее всей 1000 колонок и сохраните их в вектор. Отобразите диаграмму средних значений колонок. Объясните, почему форма диаграммы отличается от виденных ранее.
+#### 6. Найдите среднее всей 1000 колонок и сохраните их в вектор. Отобразите диаграмму средних значений колонок. Объясните, почему форма диаграммы отличается от виденных ранее.
 ```{r}
 mean.sam <- colMeans(huge.exp.1.mat)
 
@@ -153,7 +153,7 @@ curve(dnorm(x,mean=mean.norm,sd=sd.norm), from = 0.8, to = 1.20, col = "red",add
 Выводы: вид полученной диаграммы объясняется тем, что среднее значение экспоненциального распределения равняется 1/λ, а в данном случае λ=1, следовательно среднее значение каждой колонки стремится к 1.
 Гистограмма практически соответствует нормальному распределению, что может быть объяснено при помощи ЦПТ (сумма большого количества независимых случайных величин имеет распределение, близкое к нормальному). Так как при нахождении среднего значения по колонкам применяется суммирование всех элементов этих колонок, полученные средние значения удовлетворяют данной теореме и в совокупности образуют вектор нормально распределенных случайных величин.
 
-7. Рассчитайте квадрат каждого значения из huge.exp.1 и найдите среднее и стандартное отклонение полученного вектора квадратов. Объясните отличие от соответствующих показателей вектора huge.exp.1. Вам может помочь формула, по которой R рассчитывает стандартное отклонение: ``sqrt(sum((x - mean(x))^2) / (n - 1))``.
+#### 7. Рассчитайте квадрат каждого значения из huge.exp.1 и найдите среднее и стандартное отклонение полученного вектора квадратов. Объясните отличие от соответствующих показателей вектора huge.exp.1. Вам может помочь формула, по которой R рассчитывает стандартное отклонение: ``sqrt(sum((x - mean(x))^2) / (n - 1))``.
 ```{r}
 huge.exp.1.square <- huge.exp.1 ^ 2
 huge.exp.1.square.mean <- mean(huge.exp.1.square)
