--- a/laba2/lr2.RMD
+++ b/laba2/lr2.RMD
@@ -126,23 +126,22 @@ factory.run();
 factory.run();
 factory.run();
 ```
-#
-2 раз:
-автомобили  грузовики 
+<>
+2 раз:<>
+автомобили  грузовики <>
   9.861185  20.012262 
-  #
-3 раз:
-автомобили  грузовики 
+  <>
+3 раз:<>
+автомобили  грузовики <>
   10.43063   19.67539 
-  #
-4 раз:
-автомобили  грузовики 
+  <>
+4 раз:<>
+автомобили  грузовики <>
   9.925438  19.922104
-#
-5 раз:
-автомобили  грузовики 
+  <>
+5 раз:<>
+автомобили  грузовики <>
   10.39747   19.69911 
-  #
 Результаты отличаются друг от друга потому, что для оптимизации выпуска продукции используются рандомные числа.
 
 
