--- a/laba2/lr2.RMD
+++ b/laba2/lr2.RMD
@@ -42,9 +42,8 @@ summary(Cars93)
 ```{r}
 mean(Cars93[["Price"]][Cars93[["DriveTrain"]]=="Rear"])
 ```
-```{r}
 Получили число 28.95.
-```
+
 3. Найдите минимальное число лошадиных сил автомобиля для 7 пассажиров. Для 6 пассажиров
 ```{r}
 min(Cars93[["Horsepower"]][Cars93[["Passengers"]]==7])
@@ -126,22 +125,11 @@ factory.run();
 factory.run();
 factory.run();
 ```
-< >
-2 раз:<>
-автомобили  грузовики <>
-  9.861185  20.012262 
-  <>
-3 раз:<>
-автомобили  грузовики <>
-  10.43063   19.67539 
-  <>
-4 раз:<>
-автомобили  грузовики <>
-  9.925438  19.922104
-  <>
-5 раз:<>
-автомобили  грузовики <>
-  10.39747   19.69911 
+
+2 раз: автомобили 9.861185 грузовики 20.012262 ;
+3 раз: автомобили 10.43063 грузовики 19.67539 ;
+4 раз: автомобили 9.925438 грузовики 19.922104;
+5 раз: автомобили 10.39747 грузовики 19.69911.
 Результаты отличаются друг от друга потому, что для оптимизации выпуска продукции используются рандомные числа.
 
 
