--- a/laba2/lr2.RMD
+++ b/laba2/lr2.RMD
@@ -114,7 +114,8 @@ factory.run();
 
 2. С каким входными значениями функция вызвана? Какой получился результат?
 Функция ``factory.run()`` вызывается со стандартными значениями. Первоначально необходимо было изготовить 1 машину и 1 грузовик. В результате выполнения шагов выводятся затрачиваемые ресурсы и № шага цикла.В результате функция возвращает количество автомобилей и грузовиков, которое выгодно выпустить.
-Консоль выдала такие значения:
+
+*Консоль выдала такие значения:
 автомобили  грузовики 
   10.48683   19.65756
 
@@ -126,10 +127,10 @@ factory.run();
 factory.run();
 ```
 
-2 раз: автомобили 9.861185 грузовики 20.012262 ;
-3 раз: автомобили 10.43063 грузовики 19.67539 ;
-4 раз: автомобили 9.925438 грузовики 19.922104;
-5 раз: автомобили 10.39747 грузовики 19.69911.
+1. автомобили 9.861185 грузовики 20.012262 ;
+2. автомобили 10.43063 грузовики 19.67539 ;
+3. автомобили 9.925438 грузовики 19.922104;
+4. автомобили 10.39747 грузовики 19.69911.
 Результаты отличаются друг от друга потому, что для оптимизации выпуска продукции используются рандомные числа.
 
 
