--- a/laba2/lr2.RMD
+++ b/laba2/lr2.RMD
@@ -116,8 +116,7 @@ factory.run();
 Функция ``factory.run()`` вызывается со стандартными значениями. Первоначально необходимо было изготовить 1 машину и 1 грузовик. В результате выполнения шагов выводятся затрачиваемые ресурсы и № шага цикла.В результате функция возвращает количество автомобилей и грузовиков, которое выгодно выпустить.
 
 *Консоль выдала такие значения:
-автомобили  грузовики 
-  10.48683   19.65756
+автомобили 10.48683,  грузовики 19.65756
 
 3. Повторите вызов 4 раза. Полученные ответы отличаются от полученных ранее? Если да, почему? Если нет, почему?
 ```{r}
