--- a/laba2/lr2.RMD
+++ b/laba2/lr2.RMD
@@ -126,10 +126,10 @@ factory.run();
 factory.run();
 ```
 
-1. автомобили 9.861185 грузовики 20.012262 ;
-2. автомобили 10.43063 грузовики 19.67539 ;
-3. автомобили 9.925438 грузовики 19.922104;
-4. автомобили 10.39747 грузовики 19.69911.
+1) автомобили 9.861185 грузовики 20.012262 ;
+2) автомобили 10.43063 грузовики 19.67539 ;
+3) автомобили 9.925438 грузовики 19.922104;
+4) автомобили 10.39747 грузовики 19.69911;
 Результаты отличаются друг от друга потому, что для оптимизации выпуска продукции используются рандомные числа.
 
 
