--- a/laba2/lr2.RMD
+++ b/laba2/lr2.RMD
@@ -130,7 +130,7 @@ factory.run();
 2) автомобили 10.43063 грузовики 19.67539 ;
 3) автомобили 9.925438 грузовики 19.922104;
 4) автомобили 10.39747 грузовики 19.69911;
-Результаты отличаются друг от друга потому, что для оптимизации выпуска продукции используются рандомные числа.
+*Результаты отличаются друг от друга потому, что для оптимизации выпуска продукции используются рандомные числа.
 
 
 4. В приведённом коде, переменные _steps_ и _output_ находятся внутри алгоритма.
