--- a/laba 3/lr_3.RMD
+++ b/laba 3/lr_3.RMD
@@ -28,12 +28,12 @@ output: html_document
 ```
    a) Сколько строк в файле?
 ```{r}
-   length(forbesD) # 1991
+   length(forbesD) 
 ```
 1991 строк.
    b) Сколько символов в файле?
 ```{r}
-  sum(nchar(forbesD)) # 80380
+  sum(nchar(forbesD)) 
 ```
 80380 символов.
   
@@ -63,18 +63,22 @@ forbes.allprofit <- regmatches(forbesD, regexpr(pattern, forbesD)) #создан
 ```{r}
 length(forbes.allprofit)
 ```   
+Так и есть. Ровно 100.
    b) Самый большой доход должен быть доход Билла Гейтса
 ```{r}
 forbes.allprofit[1]
 ```   
+Получили: "$72 B"
    c) Такой доход должен быть в списке один раз.
 ```{r}
 length(forbes.allprofit[forbes.allprofit=="$72 B"]) #доход, как у Билла Гейтса, встречается только 1 раз
 ```   
-   d) В всписке должна быть цифра, которую мы запомнили для Ларри Эллисона.
+Да, так и есть. Результат - число 1.
+   d) В списке должна быть цифра, которую мы запомнили для Ларри Эллисона.
 ```{r}
 forbes.allprofit[forbes.allprofit=="$41 B"] #вывод дохода Ларри Эллисона
 ```   
+Да, "$41 B"
    e) Должно быть как минимум два значения, встречающихся несколько раз.
 ```{r}
 length(unique(forbes.allprofit)); #66/100
@@ -94,45 +98,59 @@ worths<-as.numeric(forbes.allprofit_new)*10^9
 ```{r}
 is.double(worths)
 ``` 
+Получаем значение TRUE.
    b. Все элементы вектора _worths_ больше 1 миллиарда.
 ```{r}
 length(worths[worths>10^9])
 ``` 
+Т.к. в векторе 100 значений, значит и сейчас должны получить 100.
+Так и есть - результат число 100.
    c. Самое большое число это доход Билла Гейтса.
 ```{r}
-max(worths); #7.2*10^10 
+max(worths); 
 ``` 
+Число: 7.2х10^10  
 6. Используйте вектор _worths_ , чтобы выяснить следующее:
    a. Какова медиана ста этих записей?
 ```{r}
-median(worths) #медиана: 8.3*10^9
+median(worths) 
 ``` 
+Медиана: 8.3х10^9
    b. Средний доход?
 ```{r}
 mean(worths) #средний доход: 1.293*10^10
 ``` 
+Средний доход: 1.293х10^10
    c. Как много людей из этого списка имеют доход больше 5млрд., 10, 25?
 ```{r}
-length(worths[worths>5*10^9]) #89 людей из списка имеют доход свыше 5 млрд.
-length(worths[worths>10*10^9]) #39 людей из списка имеют доход свыше 10 млрд.
-length(worths[worths>25*10^9]) #12 людей из списка имеют доход свыше 25 млрд.
+length(worths[worths>5*10^9])
+length(worths[worths>10*10^9])
+length(worths[worths>25*10^9])
 ``` 
-   d. Какой их общий доход?
+Больше 5 млрд: 89 людей     
+Больше 10 млрд: 39 людей    
+Больше 25 млрд: 12 людей    
+    d. Какой их общий доход?
 ```{r}
-sum(worths) #общий доход: 1.293*10^12
+sum(worths) 
 ``` 
+Общий доход составляет: 1.293х10^12
    e. Какую долю от общего дохода, составляет пятёрка самых богатых.
 ```{r}
-sum(worths[1:5])/sum(worths) #доля от общего дохода для пятерки самых богатых: 0.1883217
+sum(worths[1:5])/sum(worths) 
 ``` 
+Доля от общего дохода для пятерки самых богатых: 0.1883217
+(18%)   
    f. Какую долю от общего дохода, составляют 20 самых богатых.
 ```{r}
-sum(worths[1:20])/sum(worths) #доля от общего дохода для двадцати самых богатых: 0.4921114
+sum(worths[1:20])/sum(worths) 
 ``` 
+Доля от общего дохода для двадцати самых богатых: 0.4921114
+(49%)   
    g. В данных [федерального резерва США](https://www.federalreserve.gov/releases/z1/current/z1.pdf) найдите
    показатель дохода всех домохозяйств (Household net worth) в соответвующем году, какую долю
    общего дохода составляют 100 богатейших людей. 
 ```{r}
-household.net.worth<-92172*10^9 #доход всех домохозяйств за 2016 год
+household.net.worth<-92172*10^9 #доход всех домохозяйств за 2016 год составил 92172 млрд.
 sum(worths)/household.net.worth #доля 100 богатейших людей от общего дохода всех домохозяйств: 0.01402812
 ``` 
